...
                    <view key="view" contentMode="scaleToFill" id="yLo-3n-bhe">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2fZ-Oq-70U">
                                <rect key="frame" x="148" y="433" width="118" height="30"/>
                                <state key="normal" title="Login with Okta"/>
                                <connections>
                                    <action selector="signIn:" destination="7zA-de-rij" eventType="touchUpInside" id="4sH-CJ-FYc"/>
                                    <segue destination="vQS-KH-3Qw" kind="presentation" destinationCreationSelector="detailviewscreen:" modalPresentationStyle="fullScreen" id="k3l-9K-VtL"/>
                                </connections>
                            </button>
                        </subviews>
...
