//
//  ApolloUITests.swift
//  ApolloUITests
//
//  Created by Enrique Gongora on 9/30/20.
//  Copyright © 2020 Enrique Gongora. All rights reserved.
//

import XCTest

class ApolloUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.
        let app = XCUIApplication()
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
    
    func test001OnboardingScreens() {
        let app = XCUIApplication()
        app.launch()
        
        let nextButton = app.buttons["Next"]
        nextButton.tap()
        nextButton.tap()
        nextButton.tap()
        app.buttons["Get started"].tap()
    }
    
    func test002LoginButtonTakesYouToOktaAuth() {
        let app = XCUIApplication()
        app.buttons["Sign in with Okta"].tap()
        app.staticTexts["Login with Okta"].tap()
    }
}
